Address architecture review findings; add OneDrive receipt import folders
Architecture review remediation:
- Bind backend to loopback (server.address=127.0.0.1) since there's no
  authentication and CORS doesn't protect non-browser clients
- Wire up the previously-unused OpenAPI-generated TS types: add tsconfig.json
  with gradual JSDoc-based type checking (@ts-check) starting with the API
  layer, importing types from src/generated/api/models; new `typecheck` script
  catches backend/frontend contract drift
- Fix error message swallowing in utils/errors.js: prefer the backend's
  specific error message over the generic per-code copy, and surface a short
  request-id reference for log correlation
- Add Bean Validation (@NotNull/@Positive/@NotBlank) to Expense/Income
  entities plus a ConstraintViolationException handler, so the backend is an
  authoritative validation gate independent of the frontend Zod schema
- Harden CopilotLlmService.complete(): the sendAndWait().get() call had no
  timeout, unlike the rest of the method, risking a stranded worker thread if
  the AI subprocess hangs without ever completing
- Document the SSE self-healing polling convention in frontend/AGENTS.md so
  future real-time features follow the usePendingQueue.js pattern by default

OneDrive receipt import folders:
- Add OutlookSettings.receiptsImportFolders so additional OneDrive folders
  (outside the app-managed pending/year structure) can be configured and
  scanned for receipts placed there by something other than Bookie's own
  upload flow (e.g. a phone scanning app)
- Fix a related bug: files copied directly into the configured base folder
  itself (not its pending/ subfolder or a year subfolder) were silently
  skipped by listReceipts() and never appeared in the Receipts tab
- Extend /api/receipts/settings GET/PUT and the Settings page (new
  TagsInput) to manage import folders

Verified: backend compiles, full test suite passes, spotless clean;
frontend lint/typecheck/build clea